frontend/test/should_pass/enum_010.grg
using enum_model_006;

rule switch_ {
	goto:struct -float:Edge-> int:struct;

    modify {
        eval {
            goto.for_ = bool::FileNotFound;
            int.for_ = bool::else_;
        }
    }
}
