frontend/test/should_fail/basic_021.grg
rule r {
  -x:Edge->;
  x;
  modify { }
}
